<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Media">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/aspect_ratio_array"
            android:entryValues="@array/aspect_ratio_array_values"
            android:key="pref_aspect_ratio"
            android:summary="%s"
            android:title="@string/aspect_ratio" />
        <com.twilio.video.app.preference.RangeBarPreference
            android:title="@string/fps"
            app:endKey="pref_max_fps"
            app:endTick="30"
            app:height="@dimen/preference_aspect_ratio_height"
            app:startKey="pref_min_fps"
            app:startTick="0" />
        <com.twilio.video.app.preference.RangeBarPreference
            android:title="@string/video_dimensions"
            app:endKey="pref_max_video_dim"
            app:entries="@array/video_dimensions_array"
            app:height="@dimen/preference_video_dimensions_height"
            app:pinRadius="36dp"
            app:startKey="pref_min_video_dim" />
    </PreferenceCategory>
</PreferenceScreen>