<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoomActivity" >

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <include layout="@layout/content_room" />

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/connect_image_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/roundbutton"
                android:src="@drawable/ic_add_circle_white_24px"
                app:backgroundTint="@android:color/holo_red_dark"/>
            <ImageButton
                android:id="@+id/local_video_image_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_above="@id/connect_image_button"
                android:layout_alignEnd="@id/connect_image_button"
                android:layout_alignRight="@id/connect_image_button"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/roundbutton"
                android:src="@drawable/ic_videocam_white_24px"/>
            <ImageButton
                android:id="@+id/local_audio_image_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_above="@id/local_video_image_button"
                android:layout_alignEnd="@id/local_video_image_button"
                android:layout_alignRight="@id/local_video_image_button"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/roundbutton"
                android:src="@drawable/ic_mic_white_24px"/>
            <ImageButton
                android:id="@+id/speaker_image_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_above="@id/local_audio_image_button"
                android:layout_alignEnd="@id/local_audio_image_button"
                android:layout_alignRight="@id/local_audio_image_button"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/roundbutton"
                android:src="@drawable/ic_volume_down_white_24px"/>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="?android:attr/windowBackground"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_constraints"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fps"
                android:textSize="16sp"
                android:layout_margin="@dimen/activity_horizontal_margin" />

            <com.appyvet.rangebar.RangeBar
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fps_rangebar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                custom:tickStart="0"
                custom:tickInterval="1"
                custom:tickEnd="30"
                custom:pinMinFont="12sp"
                custom:pinMaxFont="12sp"
                custom:temporaryPins="false"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_dimensions"
                android:textSize="16sp"
                android:layout_margin="@dimen/activity_horizontal_margin" />

            <com.appyvet.rangebar.RangeBar
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/video_dimensions_rangebar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                custom:tickInterval="1"
                custom:pinRadius="30dp"
                custom:pinMinFont="12sp"
                custom:pinMaxFont="12sp"
                custom:temporaryPins="false"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aspect_ratio"
                android:textSize="16sp"
                android:layout_margin="@dimen/activity_horizontal_margin" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/aspect_ratio_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin" >

                <CheckBox
                    android:id="@+id/enable_ice_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_ice"/>

            </LinearLayout>

            <include layout="@layout/ice_options_layout"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" >

                <CheckBox
                    android:id="@+id/prefer_h264_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefer_h264" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" >

                <CheckBox
                    android:id="@+id/logout_when_conv_ends_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_when_conv_ends" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:background="?android:attr/windowBackground"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin" >

                <CheckBox
                    android:id="@+id/enable_stats_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_stats"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/local"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                <TextView
                    android:id="@+id/local_video_track_stats_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />

            </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stats_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.DrawerLayout>